# geomorphology

./: .editorconfig  .gitignore  README.md  pyproject.toml
code/: DEM.py  attributeSpace(JanMov).py  attributeSpace.py  classGenerator.py  classifier.py  exphist.py  filters.py  geraMapa.py  graphics.py  histogramAnalyzer.py  histogramExtractor.py  k-means.py  meanExtractor.py  radiusExtractor.py  seedProcessor.py  sobel.py  sobelAng.py  testAttributeSpace.py  testClassifier.py
