[tool.poetry]
name = "code"
version = "0.1.0"
description = "Este projeto tem como objetivo identificar discrepâncias no mapa geológico vigente da Formação Tupanciretã na Bacia do Paraná."
authors = ["Lucas Silva Ennes <lucassilvaennes@gmail.com>"]

[tool.poetry.scripts]
dem-test = "code.DEM:main"
histogram = "code.histogramExtractor:main"
radius = "code.radiusExtractor:main"
testAttr = "code.testAttributeSpace:main"
attrSpace = "code.attributeSpace:main"
seed = "code.seedProcessor:main"
mean = "code.meanExtractor:main"
k-means = "code.k-means:main"
graphics = "code.graphics:main"

[tool.poetry.dependencies]
python = "3.8.5"
pandas = "^1.2.3"
numpy = "^1.20.1"
GDAL = {file = "packages/GDAL-3.2.2-cp38-cp38-win32.whl"}
scipy = "^1.6.2"
opencv-python = "^4.5.1"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
